Re-make the menu on mobile and desktop. 1. Add animation, slide + fade in effect 2. Refine poor styling areas (colors, overlapping borders, spacing, font-size, padding for better user comfort) 3. Re-organize for modularity/BEM, separate header from navigation, clear-up naming; adjust css and js files to make the menu work 4. Fix the hamburger - shift to pixels from rem to adjust the effects with precision 5. Fix RWD - replace pixels with rem on header and nav blocks

--- a/public/stylesheets/grid.css
+++ b/public/stylesheets/grid.css
@@ -4,11 +4,12 @@
 }
 
 .row {
-	margin: 10px 10px;
+	margin: 10px 0;
+	padding: 15px;
 }
 
 .col {
-	padding: 5px 10px 5px 10px;
+
 }
 
 
