--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,16 +1,65 @@
+/* ======= Base Elements ======= */
 
-/* ======= "-small" - small modifier value ======= */
-/* ======= "_medium" - medium modifier value ======= */
-/* ======= "_large" - big modifier value ======= */
-
+* {
+	box-sizing: border-box;
+}
 
 body {
-	font-size: 1.25rem;
 	font-family: 'Didact Gothic', sans-serif;
 	color: #fff;
   background: url(../images/bg-1.png) no-repeat center center fixed;
   background-size: cover;
 }
+
+ul,
+ol,
+li {
+	list-style-type: none;
+}
+
+a:hover,
+a:visited,
+a:-webkit-any-link {
+	text-decoration: none;
+	color: #fff;
+}
+
+button,
+form,
+input,
+button:active,
+input:active {
+	background: transparent;
+	border: none;
+	cursor: pointer;
+	margin: 0;
+	padding: 0;
+}
+
+
+/* ===================== Grid ===================== */
+
+
+/* ======= Block - Grid ======= */
+	.grid__row {
+		margin: 10px 0;
+		padding: 15px;
+	}
+
+		.grid__row--margin-none {
+			margin: 0;
+		}
+
+
+
+
+
+/* ===================== <--- End of Grid --->  ===================== */
+
+
+
+
+/* ======= Block - Container ======= */
 
 .container {
 	margin: 0 auto;
@@ -21,75 +70,102 @@ body {
 /* ======= Block - Navigation ======= */
 
 
-	.navigation__ul {
-		width: 100%;
-		margin-top: 3rem;
-		border-top: 1px solid #fff;
+	.navigation__hamburger {
+		position: absolute;
+		top: 15px;
+		left: 15px;
 	}
+
+	.navigation__ul {
+		position: absolute;
+		width: 100%;
+		max-height: 0;
+		margin-top: 4.688rem;
+		padding: 0;
+		overflow: hidden;
+		background: rgba(13, 12, 13, .7);
+		border-bottom: 1px solid #717171;
+		-webkit-transition: max-height 1.5s, background 1.25s ease-out;
+		-moz-transition: max-height 1.5s, background 1.25s ease-out;
+		-o-transition: max-height 1.5s, background 1.25s ease-out;
+		-ms-transition: max-height 1.5s, background 1.25s ease-out;
+		transition: max-height 1.5s, background 1.25s ease-out, padding 2s ease-out;
+
+	}
+		.navigation__ul--show {
+			border-top: 1px solid #717171;
+			max-height: 90vh;
+			background: rgba(13, 12, 13, .95);
+			padding-bottom: 3rem;
+		}
 
 	.navigation__li {
 		text-align: center;
 		padding: 25px 10px;
 	}
 
+	.navigation__link {
+		padding: 15px;
+	}
+
+
 	.navigation__mobile-closed:before {
-	  content: "";
-	  position: absolute;
-	  top: 0.75rem;
-	  left: 0.5rem;
-	  width: 1rem;
-	  height: 0.125rem;
-	  border-top: 0.375rem double #fff;
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 0;
+    width: 20px;
+    height: 3px;
+    border-top: 6px double #fff;
 	}
 
 	.navigation__mobile-closed:after {
-	  content: "";
-	  position: absolute;
-	  top: 1.125rem;
-	  left: 0.5rem;
-	  width: 1rem;
-	  height: 0.125rem;
-	  border-bottom: 0.125rem solid #fff;
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 20px;
+    height: 3px;
+    border-bottom: 2px solid #fff;
 	}
 
 	.navigation__mobile-open:before {
-		border-top: 0.1875rem solid #fff;
-
-		transform: rotate(45deg) translate(0, 5.125px);
-		-webkit-transform: rotate(45deg) translate(0, 5.125px);
+		border-top: 3px solid #fff;
+    transform: rotate(45deg) translate(1px, 4px);
+		-webkit-transform: rotate(45deg) translate(1px, 4px);
 		transition: transform 0.5s ease-in-out;
 		-webkit-transition: -webkit-transform 0.5s ease-in-out;
 	}
 
 	.navigation__mobile-open:after {
-		border-bottom: 0.1875rem solid #fff;
-		transform: rotate(-45deg) translate(0, -5.125px);
-		-webkit-transform: rotate(-45deg) translate(0, -5.125px);
+		border-bottom: 3px solid #fff;
+		transform: rotate(-45deg) translate(1px, -4px);
+		-webkit-transform: rotate(-45deg) translate(1px, -4px);
 		transition: transform 0.5s ease-in;
 		-webkit-transition: -webkit-transform 0.5s ease-in-out;
 	}
 
-	.navigation_display {
-		display: none;
-	}
 
 
 /* ======= Block - Header ======= */
 .header {
 	position: absolute;
 	width: 100%;
-	min-height: 3rem;
-	padding: 10px;
-	box-shadow: 0 0 1px 1px #eee;
-	background: rgba(13, 12, 13, 0.6);
+	min-height: 4.688rem;
+	box-shadow: 0 0 1px 1px #717171;
+	background: rgba(13, 12, 13, .7);
 }
 
-.header * {
-		z-index: 100;
-}
-
-
-
+	.header__title {
+		position: absolute;
+		top: 0;
+		right: 0;
+		left: 0;
+		margin: 0;
+		line-height: 4.688rem;
+		font-size: 1.75rem;
+		text-align: center;
+	}
 
 
 /* ======= Block - Authentication ======= */
@@ -144,19 +220,12 @@ body {
    background-size: contain;
 }
 
-.profile__presentation--comments {
-	 display: flex;
-   flex-direction: row-reverse;
-   justify-content: flex-end;
-   background-size: contain;
+.profile__presentation--background-gray {
+   margin: -15px -15px 0 -15px;
+	 padding: 15px;
    background: rgba(255, 255, 255, 0.1);
 }
 
-.profile__presentation--date {
-	padding-top: 25px;
-	font-family: sans-serif;
-	font-size: .875rem;
-}
 
 .profile__body {
 	max-width: 250px;
@@ -167,10 +236,6 @@ body {
 		max-width: 100px;
 	}
 
-		.profile__name--comments {
-			margin-left: 10px;
-			max-width: 100px;
-		}
 
 		.profile__presentation-vertical {
 				flex-direction: column;
@@ -181,8 +246,7 @@ body {
 
 	.book {
 		position: relative;
-		margin: 40px 0;
-    background: rgba(13, 12, 13, 0.6);
+    background: rgba(13, 12, 13, 0.7);
 		border: 1px solid #717171;
 	}
 
@@ -195,18 +259,29 @@ body {
 
 /* ======= Block - Comments ======= */
 
-.comments {
+.comment {
   border: 1px solid #717171;
 	background: rgba(13, 12, 13, 0.6);
 }
 
-
-	.comments__title {
+	.comment__title {
 		padding: 20px 20px 20px 0;
 		margin-bottom: -10px;
 		color: #fff;
 		background: rgba(13, 12, 13, 0.9);
 	}
+
+	.comment__date {
+		margin-top: 15px;
+		font-family: sans-serif;
+		font-size: .875rem;
+	}
+
+	.comment__comment {
+		margin-top: 15px;
+	}
+
+
 
 	.comments__buttons {
 		display: flex;
@@ -355,11 +430,6 @@ body {
 
 /* ======= Block - Paragraph ======= */
 
-.paragraph {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	text-align: justify;
-}
 
 /* ======= Modifier - Margin ======= */
 
@@ -390,13 +460,18 @@ body {
 
 @media screen and (min-width: 800px) {
 
+
+/* ======= Block - Grid ======= */
+
+	.grid__row {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
 	.container {
 		padding: 88px 10px 10px 10px;
 		max-width: 1050px;
-	}
-
-	.header__container {
-		max-width: 960px;
 	}
 
 	/* ======= Block - Collection ======= */
@@ -500,6 +575,17 @@ body {
     padding: 5px 0;
 	}
 
+
+
+/* ======= Block - Button ======= */
+
+.comments {
+  flex-direction: column;
+}
+
+
+
+
 /* ======= Block - Button ======= */
 
 	.button {
@@ -536,24 +622,25 @@ body {
 
 	.header {
 		display: flex;
+		justify-content: space-between;
 		align-items: center;
 	}
-
-	.header__container {
-		display: flex;
-		align-items: center;
-		flex: 0 0 1200px;
-		margin: 0 auto;
+		.header__title {
+			position: static;
+			flex: 0 0 20%;
 	}
 
 	.navigation {
 		display: flex;
-		flex: 0 0 100%;
+		flex: 0 0 70%;
+		justify-content: flex-end;
 	}
 
 	.navigation__ul {
-		margin-top: 0;
-		border-top: none;
+		position: static;
+		max-height: 100%;
+		margin: 0;
+		border: none;
 	}
 
 		.navigation__li {
@@ -561,6 +648,10 @@ body {
 			margin: 0 5px;
 
 		}
+
+			.navigation__link {
+
+			}
 
 	.navigation_display {
 		display: flex;
